# sliderool

./: .gitignore  README.md  dune-project  make_docs.sh  sliderool.opam
docs/: index.html
docs/sliderool/: index.html  log_format_patterns.html
sliderool/docs/: index.mld  log_format_patterns.mld
sliderool/lib/: dune  entry.ml  formats.ml  log_format_lexer.mll  regex_builder.ml
sliderool/test/: dune  lexer.ml  regex_builder.ml
