(lang dune 2.0)
(name sliderool)
(version 0.1)
(source (github roddyyaga/sliderool))
(documentation "https://roddyyaga.github.io/sliderool")
(license MIT)
(authors "Roddy MacSween <github@roddymacsween.co.uk>")
(maintainers "Roddy MacSween <github@roddymacsween.co.uk>")
(generate_opam_files true)

(package
(name sliderool)
(synopsis "Sliderool - simple analytics using server logs")
(depends
dune
core
)
)
